// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegoMetricsCalculator calculate 1`] = `
Object {
  "categories": Array [
    "someKey",
    "someOtherKey",
  ],
  "entries": Array [
    DateMetrics {
      "date": "2018-10-10",
      "valuesByCategory": Object {
        "someKey": 16,
        "someOtherKey": 9,
      },
    },
    DateMetrics {
      "date": "2018-10-11",
      "valuesByCategory": Object {
        "someKey": 3,
        "someOtherKey": 13,
      },
    },
  ],
}
`;

exports[`LegoMetricsCalculator calculate with periods 1`] = `
Object {
  "categories": Array [
    "someKey",
    "someOtherKey",
  ],
  "entries": Array [
    DateMetrics {
      "date": "2018-10-11",
      "valuesByCategory": Object {
        "someKey": 19,
        "someOtherKey": 22,
      },
    },
  ],
}
`;

exports[`LegoMetricsCalculator calculate with periods and percentage 1`] = `
Object {
  "categories": Array [
    "someKey",
    "someOtherKey",
  ],
  "entries": Array [
    DateMetrics {
      "date": "2018-10-11",
      "valuesByCategory": Object {
        "someKey": 46,
        "someOtherKey": 54,
      },
    },
  ],
}
`;
